- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5528] Rename tx_seminars_Bag_Event to Tx_Seminars_Bag_Event
- [#5527] Rename tx_seminars_Mapper_Lodging to Tx_Seminars_Mapper_Lodging
- [#5541] Rename tx_seminars_Tests_Fixtures_Bag_Testing to Tx_Seminars_Tests_Unit_Fixtures_Bag_Testing
- [#5540] Rename tx_seminars_tests_fixtures_OldModel_Testing to Tx_Seminars_Tests_Unit_Fixtures_OldModel_Testing
- [#5525] Rename tx_seminars_Bag_Abstract to Tx_Seminars_Bag_Abstract
- [#5519] Rename tx_seminars_module2 to Tx_Seminars_Module2
- [#5523] Rename tx_seminars_BackEnd_SpeakersList to Tx_Seminars_BackEnd_SpeakersList
- [#5522] Rename tx_seminars_BackEnd_RegistrationsList to Tx_Seminars_BackEnd_RegistrationsList
- [#5521] Rename tx_seminars_BackEnd_OrganizersList to Tx_Seminars_BackEnd_OrganizersList
- [#5520] Rename tx_seminars_BackEnd_Module to Tx_Seminars_BackEnd_Module
- [#5518] Rename tx_seminars_BackEnd_GeneralEventMailForm to Tx_Seminars_BackEnd_GeneralEventMailForm
- [#5516] Rename tx_seminars_BackEnd_EventsList into Tx_Seminars_BackEnd_EventsList
- [#5530] Rename tx_seminars_Bag_Organizer to Tx_Seminars_Bag_Organizer
- [#5516] Rename tx_seminars_BackEnd_ConfirmEventMailForm to Tx_Seminars_BackEnd_ConfirmEventMailForm
- [#5508] Rename tx_oelib_Model_BackEndUser to Tx_Oelib_Model_BackEndUser
- [#5510] Rename tx_oelib_List to Tx_Oelib_List
- [#5486] Rename tx_oelib_BackEndLoginManager to Tx_Oelib_BackEndLoginManager
- [#5509] Rename tx_oelib_Model_BackEndUserGroup to Tx_Oelib_Model_BackEndUserGroup
- [#5506] Rename tx_oelib_Model to Tx_Oelib_Model
- [#5503] Rename tx_oelib_PageFinder to Tx_Oelib_PageFinder