@@ -21,7 +21,7 @@ use TYPO3\CMS\Core\Utility\GeneralUtility;
  *
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_seminars_Bag_Category extends Tx_Seminars_Bag_Abstract {
+class Tx_Seminars_Bag_Category extends Tx_Seminars_Bag_Abstract {
 	/**
 	 * The constructor. Creates a bag that contains test records and allows to iterate over them.
 	 *
