@@ -25,7 +25,7 @@ class tx_seminars_BagBuilder_Category extends tx_seminars_BagBuilder_Abstract {
 	/**
 	 * @var string class name of the bag class that will be built
 	 */
-	protected $bagClassName = 'tx_seminars_Bag_Category';
+	protected $bagClassName = Tx_Seminars_Bag_Category::class;
 
 	/**
 	 * @var string the table name of the bag to build
