@@ -21,9 +21,9 @@
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_Bag_CategoryTest extends Tx_Phpunit_TestCase {
+class Tx_Seminars_Bag_CategoryTest extends Tx_Phpunit_TestCase {
 	/**
-	 * @var tx_seminars_Bag_Category
+	 * @var Tx_Seminars_Bag_Category
 	 */
 	private $fixture;
 
@@ -37,7 +37,7 @@ class tx_seminars_Bag_CategoryTest extends Tx_Phpunit_TestCase {
 
 		$this->testingFramework->createRecord('tx_seminars_categories');
 
-		$this->fixture = new tx_seminars_Bag_Category('is_dummy_record=1');
+		$this->fixture = new Tx_Seminars_Bag_Category('is_dummy_record=1');
 	}
 
 	protected function tearDown() {
